--- a/src/app/task-update/task-update.component.html
+++ b/src/app/task-update/task-update.component.html
@@ -1,1 +1,57 @@
-<p>task-update works!</p>
+<!-- <app-side-bar></app-side-bar> -->
+<main>
+    <div class="col-md-6 offset-md-3">
+        <h3>Update task</h3>
+        <form (ngSubmit)="ngSubmit()">
+            <div class="form-group">
+                <label>Name:</label>
+                <input type="text" class="form-control" id="task-name" [(ngModel)]="task.name" name="task-name" />
+            </div>
+            <div class="form-group">
+                <label>User ID:</label>
+                <input type="text" class="form-control" id="task-userId" [(ngModel)]="task.userId" name="task-userId" />
+            </div>
+            <div class="form-group">
+                <label>Start date:</label>
+                <input type="datetime-local" class="form-control" id="task-start-date" [(ngModel)]="task.startDate"
+                    name="task-start-date" />
+            </div>
+            <div class="form-group">
+                <label>End date:</label>
+                <input type="datetime-local" class="form-control" id="task-end-date" [(ngModel)]="task.endDate"
+                    name="task-end-date" />
+            </div>
+            <div class="form-group">
+                <label>State:</label>
+                <select [formControl]="statesSelectedValues">
+                    <option *ngFor="let value of statesEnumsValues" [value]="value" id="task-state" name="task-state">
+                        {{ value }}
+                    </option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label>Priority:</label>
+                <select [formControl]="prioritiesSelectedValues">
+                    <option *ngFor="let value of prioritiesEnumsValues" [value]="value" id="task-priority"
+                        name="task-priority">
+                        {{ value }}
+                    </option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label>Category:</label>
+                <select [formControl]="categoriesSelectedValues">
+                    <option *ngFor="let value of categoriesEnumsValues" [value]="value" id="task-category"
+                        name="task-category">
+                        {{ value }}
+                    </option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label>Note:</label>
+                <input type="text" class="form-control" id="task-note" [(ngModel)]="task.note" name="task-note" />
+            </div>
+            <button class="btn btn-success" type="submit">Submit</button>
+        </form>
+    </div>
+</main>
