--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,62 @@
-<nav class="navbar navbar-expand-sm bg-primary navbar-dark">
-  <ul class="navbar-nav">
+<mat-toolbar>
+  <div class="logo">
+    <button mat-icon-button *ngIf="sidenav.mode === 'over'" (click)="sidenav.toggle()">
+      <mat-icon *ngIf="!sidenav.opened">
+        menu
+      </mat-icon>
+      <mat-icon *ngIf="sidenav.opened">
+        close
+      </mat-icon>
+    </button>
+    <h4>Taskly</h4>
+  </div>
+</mat-toolbar>
+
+<mat-sidenav-container>
+  <mat-sidenav #sidenav="matSidenav">
+    <div class="user-info" *ngIf="userProperties">
+      <img class="avatar mat-elevation-z8" src="../assets/images/user.png">
+      <h4>{{ userProperties.username }}</h4>
+      <p>{{ userProperties.role }}</p>
+      <!-- <p>ACCOUNT-TYPE</p> -->
+    </div>
+    <mat-divider></mat-divider>
+    <ul class="navbar-nav">
       <li class="nav-item">
-          <a routerLink="tasks" routerLinkActive="active" class="nav-link">Tasks</a>
+        <fa-icon [icon]="dashboardIcon"></fa-icon>
+        <a routerLink="user" routerLinkActive="active" class="nav-link">Dashboard</a>
       </li>
       <li class="nav-item">
-          <a routerLink="create-task" routerLinkActive="active" class="nav-link">Add task</a>
+        <fa-icon [icon]="plusIcon"></fa-icon>
+        <a routerLink="create-task" routerLinkActive="active" class="nav-link">New task</a>
       </li>
       <li class="nav-item">
-          <a routerLink="login" routerLinkActive="active" class="nav-link">Login</a>
+        <fa-icon [icon]="listIcon"></fa-icon>
+        <a routerLink="tasks" routerLinkActive="active" class="nav-link">Task list</a>
+      </li>
+      <mat-divider></mat-divider>
+      <li class="nav-item">
+        <fa-icon [icon]="settingsIcon"></fa-icon>
+        <a routerLink="settings" routerLinkActive="inactive" class="nav-link">Settings</a>
       </li>
       <li class="nav-item">
-          <a routerLink="register" routerLinkActive="active" class="nav-link">Register</a>
+        <fa-icon [icon]="signOutIcon"></fa-icon>
+        <button (click)="signOut()" routerLinkActive="inactive" class="nav-link">Sign out</button>
       </li>
-  </ul>
-</nav>
-<div class="container">
-  <router-outlet></router-outlet>
-</div>
+
+      <li class="nav-item">
+        <fa-icon [icon]="signOutIcon"></fa-icon>
+        <button routerLink="login" routerLinkActive="inactive" class="nav-link">Sign in</button>
+      </li>
+      <li class="nav-item">
+        <fa-icon [icon]="signOutIcon"></fa-icon>
+        <button routerLink="register" routerLinkActive="inactive" class="nav-link">Sign up</button>
+      </li>
+    </ul>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <div class="container">
+      <router-outlet></router-outlet>
+    </div>
+  </mat-sidenav-content>
+</mat-sidenav-container>
