--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
 
 @import "~bootstrap/dist/css/bootstrap.min.css";
 @import '@angular/material/prebuilt-themes/indigo-pink.css';
+@import 'https://fonts.googleapis.com/icon?family=Material+Icons';
+
