--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,7 +9,7 @@
                     <h5>and check your tasks</h5>
                 </div>
                 <div class="field-container">
-                    <img src="assets/images/checklist-img.svg" alt="checklist-img">
+                    <img src="assets/images/checklist.png" alt="checklist-img">
                 </div>
             </div>
         </div>
