--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,10 +8,9 @@
         close
       </mat-icon>
     </button>
-    <h4>Taskly</h4>
+    <h4><img atl="logo" src="assets/images/taskly_logo.svg"> Taskly</h4>
   </div>
 </mat-toolbar>
-
 <mat-sidenav-container>
   <mat-sidenav #sidenav="matSidenav">
     <div class="user-info" *ngIf="userProperties">
@@ -20,7 +19,6 @@
       <p>{{ userProperties.role }}</p>
       <!-- <p>ACCOUNT-TYPE</p> -->
     </div>
-    <mat-divider></mat-divider>
     <ul class="navbar-nav">
       <li class="nav-item">
         <fa-icon [icon]="dashboardIcon"></fa-icon>
@@ -32,8 +30,22 @@
       </li>
       <li class="nav-item">
         <fa-icon [icon]="listIcon"></fa-icon>
-        <a routerLink="tasks" routerLinkActive="active" class="nav-link">Task list</a>
+        <a routerLink="#" routerLinkActive="inactive" class="nav-link">Project:</a>
       </li>
+      <ul>
+        <li class="nav-item">
+          <fa-icon [icon]="homeIcon"></fa-icon>
+          <a routerLink="#" routerLinkActive="active" class="nav-link">Home</a>
+        </li>
+        <li class="nav-item">
+          <fa-icon [icon]="workIcon"></fa-icon>
+          <a routerLink="#" routerLinkActive="active" class="nav-link">Work</a>
+        </li>
+        <li class="nav-item">
+          <fa-icon [icon]="elseIcon"></fa-icon>
+          <a routerLink="#" routerLinkActive="active" class="nav-link">Else</a>
+        </li>
+      </ul>
       <mat-divider></mat-divider>
       <li class="nav-item">
         <fa-icon [icon]="settingsIcon"></fa-icon>
