--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -1,4 +1,3 @@
-<!-- <app-side-bar></app-side-bar> -->
 <main>
     <div>
         <mat-form-field>
@@ -13,15 +12,15 @@
                 </ng-container>
                 <ng-container matColumnDef="category">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header>Category</th>
-                    <td mat-cell *matCellDef="let row">{{row.category}}</td>
+                    <td mat-cell *matCellDef="let row">{{row.category.value}}</td>
                 </ng-container>
                 <ng-container matColumnDef="priority">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header>Prirority</th>
-                    <td mat-cell *matCellDef="let row">{{row.priority}}</td>
+                    <td mat-cell *matCellDef="let row">{{row.priority.value}}</td>
                 </ng-container>
                 <ng-container matColumnDef="status">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header>State</th>
-                    <td mat-cell *matCellDef="let row">{{row.state}}</td>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
+                    <td mat-cell *matCellDef="let row">{{row.status.value}}</td>
                 </ng-container>
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="taskDetails(row.id)"></tr>
