--- a/src/app/task-update/task-update.component.html
+++ b/src/app/task-update/task-update.component.html
@@ -3,8 +3,8 @@
     <div class="col-md-6 offset-md-3">
         <h3>Update task</h3>
         <form (ngSubmit)="ngSubmit()">
-            <div class="form-group">
-                <label>Name:</label>
+            <!-- <div class="form-group">
+                <label for="name">{{ name }}</label>
                 <input type="text" class="form-control" id="task-name" [(ngModel)]="task.name" name="task-name" />
             </div>
             <div class="form-group">
@@ -51,7 +51,7 @@
                 <label>Note:</label>
                 <input type="text" class="form-control" id="task-note" [(ngModel)]="task.note" name="task-note" />
             </div>
-            <button class="btn btn-success" type="submit">Submit</button>
+            <button class="btn btn-success" type="submit">Submit</button> -->
         </form>
     </div>
 </main>
