--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,4 @@
-mat-toolbar {
+/* mat-toolbar {
     background: linear-gradient(90deg, rgba(20, 46, 70, 1) 0%, rgba(20, 46, 70, 1) 30%, rgba(61, 152, 170, 1) 100%);
     color: white;
     display: flex;
@@ -21,7 +21,7 @@ mat-toolbar h4 {
 mat-sidenav {
     width: 200px;
     border-right: none;
-    /* background: rgba(25, 35, 45, 1); */
+     background: rgba(25, 35, 45, 1); 
     background: rgba(20, 46, 70, 1);
     color: white;
     text-align: center;
@@ -75,4 +75,4 @@ mat-divider {
     margin: 15px 0;
     background-color: grey;
     margin: 5px 15px;
-}
+} */
