--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,11 @@
 
-@import "~bootstrap/dist/css/bootstrap.min.css";
-@import '@angular/material/prebuilt-themes/indigo-pink.css';
+@import 'node_modules/@angular/material/prebuilt-themes/indigo-pink.css';
 @import 'https://fonts.googleapis.com/icon?family=Material+Icons';
+@import "node_modules/bootstrap/dist/css/bootstrap.min.css";
 
+mat-form-field {
+    width: 100%;
+}
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
