Refactor create and update form.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,76 +1,6 @@
-<!-- <mat-toolbar>
-  <div class="logo">
-    <button mat-icon-button *ngIf="sidenav.mode === 'over'" (click)="sidenav.toggle()">
-      <mat-icon *ngIf="!sidenav.opened">
-        menu
-      </mat-icon>
-      <mat-icon *ngIf="sidenav.opened">
-        close
-      </mat-icon>
-    </button>
-    <h4><img alt="logo" src="assets/images/taskly_logo.svg"> Taskly</h4>
-  </div>
-</mat-toolbar> -->
-<!-- <mat-sidenav-container>
-  <mat-sidenav #sidenav="matSidenav">
-    <div class="user-info" *ngIf="userProperties">
-      <img alt="avatar" class="avatar mat-elevation-z8" src="../assets/images/user.png">
-      <h4>{{ userProperties.username }}</h4>
-      <p>{{ userProperties.role }}</p>
-    
-    </div>
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <fa-icon [icon]="dashboardIcon"></fa-icon>
-        <a routerLink="user" routerLinkActive="active" class="nav-link">Dashboard</a>
-      </li>
-      <li class="nav-item">
-        <fa-icon [icon]="plusIcon"></fa-icon>
-        <a routerLink="create-task" routerLinkActive="active" class="nav-link">New task</a>
-      </li>
-      <li class="nav-item">
-        <fa-icon [icon]="listIcon"></fa-icon>
-        <a routerLink="#" routerLinkActive="inactive" class="nav-link">Project:</a>
-      </li>
-      <ul>
-        <li class="nav-item">
-          <fa-icon [icon]="homeIcon"></fa-icon>
-          <a routerLink="#" routerLinkActive="active" class="nav-link">Home</a>
-        </li>
-        <li class="nav-item">
-          <fa-icon [icon]="workIcon"></fa-icon>
-          <a routerLink="#" routerLinkActive="active" class="nav-link">Work</a>
-        </li>
-        <li class="nav-item">
-          <fa-icon [icon]="elseIcon"></fa-icon>
-          <a routerLink="#" routerLinkActive="active" class="nav-link">Else</a>
-        </li>
-      </ul>
-      <mat-divider></mat-divider>
-      <li class="nav-item">
-        <fa-icon [icon]="settingsIcon"></fa-icon>
-        <a routerLink="settings" routerLinkActive="inactive" class="nav-link">Settings</a>
-      </li>
-      <li class="nav-item">
-        <fa-icon [icon]="signOutIcon"></fa-icon>
-        <button (click)="signOut()" routerLinkActive="inactive" class="nav-link">Sign out</button>
-      </li>
-
-      <li class="nav-item">
-        <fa-icon [icon]="signOutIcon"></fa-icon>
-        <button routerLink="login" routerLinkActive="inactive" class="nav-link">Sign in</button>
-      </li>
-      <li class="nav-item">
-        <fa-icon [icon]="signOutIcon"></fa-icon>
-        <button routerLink="register" routerLinkActive="inactive" class="nav-link">Sign up</button>
-      </li>
-    </ul>
-  </mat-sidenav>
-  <mat-sidenav-content>
-    <div class="container">
-      <router-outlet></router-outlet>
-    </div>
-  </mat-sidenav-content>
-</mat-sidenav-container> -->
 <app-header></app-header>
-<router-outlet></router-outlet>
+<main>
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
+</main>
